codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_mixed.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 215
expression: snapshot
---
status line: my-project · feature/mixed-preview · Mixed preview thread
terminal title: project | Mixed preview thread | Tasks 0/0
