codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
assertion_line: 219
expression: snapshot
---
status line: monthly 65% · weekly 50%
terminal title: monthly 65% left | weekly 50% left
