codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__thread_name_update_resume_hint.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 1033
expression: rendered
---
• Thread renamed to review-fix, to resume this thread run codex resume review-fix
